[package]
name = "het_snp_kmers"
version = "0.1.0"
authors = ["wheaton5 <whheaton@gmail.com>"]

[dependencies]
clap = {version = "~2.27.0", features = ["yaml"]}
bloom = "0.3.2"
flate2 = "1.0.6"
debruijn = {git = "https://github.com/10XGenomics/rust-debruijn.git"}
dna_io = {git = "https://github.com/wheaton5/dna_io.git"}
fnv = "1.0.6"
